scripts/tests/errors/err_nil_property.bu
// Test: property access on nil
// Expected: runtime error about property access on nil

var x = nil;
var y = x.name;
